--- a/models/q_learning.ipynb
+++ b/models/q_learning.ipynb
@@ -124,105 +124,10 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
     "import numpy as np\n",
-    "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "if 'SUMO_HOME' in os.environ:\n",
-    "    tools = os.path.join(os.environ['SUMO_HOME'], 'tools')\n",
-    "    sys.path.append(tools)\n",
-    "else:\n",
-    "    sys.exit(\"SUMO_HOME not found\")\n",
-    "\n",
     "import traci\n",
-    "\n",
-    "class RampMeteringEnv:\n",
-    "    def __init__(self, use_traffic_light=True):\n",
-    "        self.cfg_path = str(Path(\"D:/3CS/RL/rl for ramp metering/sumo/mynet.sumocfg\"))\n",
-    "        self.sumoCmd = [\"sumo\", \"-c\", self.cfg_path, \"--no-step-log\", \"--no-warnings\"]\n",
-    "        self.use_traffic_light = use_traffic_light\n",
-    "        \n",
-    "        # Fixed lengths from SUMO network\n",
-    "        self.highway_length = 1000  # meters\n",
-    "        self.ramp_length = 100      # meters\n",
-    "        \n",
-    "        # Normalization constants\n",
-    "        self.MAX_DENSITY = 20.0\n",
-    "        self.MAX_QUEUE = 10.0\n",
-    "        self.MAX_SPEED = 13.89\n",
-    "        self.MAX_WAIT_TIME = 300.0\n",
-    "        \n",
-    "        # Q-learning parameters\n",
-    "        self.n_states = 4\n",
-    "        self.n_actions = 4\n",
-    "        self.q_table = {}\n",
-    "        \n",
-    "        # Network elements\n",
-    "        self.highway = \"2to3\"\n",
-    "        self.ramp = \"intramp\"\n",
-    "        self.tl_id = \"node6\"\n",
-    "\n",
-    "    def start_simulation(self):\n",
-    "        try:\n",
-    "            traci.start(self.sumoCmd)\n",
-    "            return True\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error: {e}\")\n",
-    "            return False\n",
-    "\n",
-    "    def get_state(self):\n",
-    "        # Highway metrics (using fixed length)\n",
-    "        highway_density = traci.edge.getLastStepVehicleNumber(self.highway) / (self.highway_length/1000)\n",
-    "        highway_speed = traci.edge.getLastStepMeanSpeed(self.highway)\n",
-    "        \n",
-    "        # Ramp metrics\n",
-    "        ramp_queue = traci.edge.getLastStepHaltingNumber(self.ramp)\n",
-    "        ramp_speed = traci.edge.getLastStepMeanSpeed(self.ramp)\n",
-    "        \n",
-    "        # Normalize values\n",
-    "        norm_density = min(highway_density / self.MAX_DENSITY, 1.0)\n",
-    "        norm_queue = min(ramp_queue / self.MAX_QUEUE, 1.0)\n",
-    "        norm_highway_speed = min(highway_speed / self.MAX_SPEED, 1.0)\n",
-    "        norm_ramp_speed = min(ramp_speed / self.MAX_SPEED, 1.0)\n",
-    "        \n",
-    "        return tuple([norm_density, norm_queue, norm_highway_speed, norm_ramp_speed])\n",
-    "\n",
-    "    def get_q_value(self, state, action=None):\n",
-    "        if state not in self.q_table:\n",
-    "            self.q_table[state] = np.zeros(self.n_actions)\n",
-    "        if action is None:\n",
-    "            return self.q_table[state]\n",
-    "        return self.q_table[state][action]\n",
-    "\n",
-    "    def take_action(self, action):\n",
-    "        if not self.use_traffic_light:\n",
-    "            traci.simulationStep()\n",
-    "            return self.get_state(), self.calculate_reward(), False\n",
-    "            \n",
-    "        green_times = [5, 10, 15, 20]\n",
-    "        try:\n",
-    "            traci.trafficlight.setPhaseDuration(self.tl_id, green_times[action])\n",
-    "            \n",
-    "            # Simulate for green time duration\n",
-    "            for _ in range(green_times[action]):\n",
-    "                if traci.simulation.getMinExpectedNumber() <= 0:\n",
-    "                    return self.get_state(), 0, True\n",
-    "                traci.simulationStep()\n",
-    "            \n",
-    "            return self.get_state(), self.calculate_reward(), False\n",
-    "        except:\n",
-    "            return self.get_state(), 0, True\n",
-    "\n",
-    "    def calculate_reward(self):\n",
-    "        waiting_time = (traci.edge.getWaitingTime(self.highway) + \n",
-    "                     traci.edge.getWaitingTime(self.ramp))\n",
-    "        \n",
-    "        vehicles = (traci.edge.getLastStepVehicleNumber(self.highway) + \n",
-    "                   traci.edge.getLastStepVehicleNumber(self.ramp))\n",
-    "        \n",
-    "        return (-waiting_time + vehicles * 10)\n",
+    "from env import RampMeteringEnv\n",
     "def train_model(episodes=500):\n",
     "    alpha = 0.01\n",
     "    gamma = 0.99\n",
@@ -271,6 +176,13 @@
     "# Training phase\n",
     "print(\"Training model...\")\n",
     "train_results = train_model(episodes=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Without Traffic Light**"
    ]
   },
   {
@@ -397,110 +309,15 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
+    "from env import  RampMeteringEnv\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "if 'SUMO_HOME' in os.environ:\n",
-    "    tools = os.path.join(os.environ['SUMO_HOME'], 'tools')\n",
-    "    sys.path.append(tools)\n",
-    "else:\n",
-    "    sys.exit(\"SUMO_HOME not found\")\n",
-    "\n",
-    "import traci\n",
-    "\n",
-    "class RampMeteringEnv:\n",
-    "    def __init__(self):\n",
-    "        self.cfg_path = str(Path(\"D:/3CS/RL/rl for ramp metering/sumo/mynet.sumocfg\"))\n",
-    "        self.sumoCmd = [\"sumo\", \"-c\", self.cfg_path, \"--no-step-log\", \"--no-warnings\"]\n",
-    "\n",
-    "        # Fixed lengths from SUMO network\n",
-    "        self.highway_length = 1000  # meters\n",
-    "        self.ramp_length = 100      # meters\n",
-    "\n",
-    "        # Normalization constants\n",
-    "        self.MAX_DENSITY = 20.0\n",
-    "        self.MAX_QUEUE = 10.0\n",
-    "        self.MAX_SPEED = 13.89\n",
-    "        self.MAX_WAIT_TIME = 300.0\n",
-    "\n",
-    "        # Q-learning parameters\n",
-    "        self.n_states = 4\n",
-    "        self.n_actions = 4  # Different metering rates\n",
-    "        self.q_table = {}\n",
-    "\n",
-    "        # Network elements\n",
-    "        self.highway = \"2to3\"\n",
-    "        self.ramp = \"intramp\"\n",
-    "\n",
-    "    def start_simulation(self):\n",
-    "        try:\n",
-    "            traci.start(self.sumoCmd)\n",
-    "            return True\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error: {e}\")\n",
-    "            return False\n",
-    "\n",
-    "    def get_state(self):\n",
-    "        # Highway metrics (using fixed length)\n",
-    "        highway_density = traci.edge.getLastStepVehicleNumber(self.highway) / (self.highway_length/1000)\n",
-    "        highway_speed = traci.edge.getLastStepMeanSpeed(self.highway)\n",
-    "\n",
-    "        # Ramp metrics\n",
-    "        ramp_queue = traci.edge.getLastStepHaltingNumber(self.ramp)\n",
-    "        ramp_speed = traci.edge.getLastStepMeanSpeed(self.ramp)\n",
-    "\n",
-    "        # Normalize values\n",
-    "        norm_density = min(highway_density / self.MAX_DENSITY, 1.0)\n",
-    "        norm_queue = min(ramp_queue / self.MAX_QUEUE, 1.0)\n",
-    "        norm_highway_speed = min(highway_speed / self.MAX_SPEED, 1.0)\n",
-    "        norm_ramp_speed = min(ramp_speed / self.MAX_SPEED, 1.0)\n",
-    "\n",
-    "        return tuple([norm_density, norm_queue, norm_highway_speed, norm_ramp_speed])\n",
-    "\n",
-    "    def get_q_value(self, state, action=None):\n",
-    "        if state not in self.q_table:\n",
-    "            self.q_table[state] = np.zeros(self.n_actions)\n",
-    "        if action is None:\n",
-    "            return self.q_table[state]\n",
-    "        return self.q_table[state][action]\n",
-    "\n",
-    "    def take_action(self, action):\n",
-    "        # Define ramp inflow rates based on actions (e.g., vehicles per second)\n",
-    "        inflow_rates = [0.2, 0.5, 1.0, 2.0]  # vehicles/second\n",
-    "        inflow_rate = inflow_rates[action]\n",
-    "\n",
-    "        try:\n",
-    "            # Control ramp inflow by adding vehicles at a controlled rate\n",
-    "            traci.edge.adaptTraveltime(self.ramp, 1 / inflow_rate)  # Adjust travel time to simulate metering\n",
-    "\n",
-    "            # Simulate for a fixed number of steps (e.g., 10 seconds)\n",
-    "            for _ in range(10):\n",
-    "                if traci.simulation.getMinExpectedNumber() <= 0:\n",
-    "                    return self.get_state(), 0, True\n",
-    "                traci.simulationStep()\n",
-    "\n",
-    "            return self.get_state(), self.calculate_reward(), False\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error during action execution: {e}\")\n",
-    "            return self.get_state(), 0, True\n",
-    "\n",
-    "    def calculate_reward(self):\n",
-    "        waiting_time = (traci.edge.getWaitingTime(self.highway) + \n",
-    "                        traci.edge.getWaitingTime(self.ramp))\n",
-    "\n",
-    "        vehicles = (traci.edge.getLastStepVehicleNumber(self.highway) + \n",
-    "                    traci.edge.getLastStepVehicleNumber(self.ramp))\n",
-    "\n",
-    "        return (-waiting_time + vehicles * 10)\n",
-    "\n",
+    "import numpy as np\n",
+    "import traci \n",
     "def train_model(episodes=500):\n",
     "    alpha = 0.01\n",
     "    gamma = 0.99\n",
     "    epsilon = 0.1\n",
-    "    env = RampMeteringEnv()\n",
+    "    env = RampMeteringEnv(use_traffic_light=False)\n",
     "    results = []\n",
     "\n",
     "    for episode in range(episodes):\n",
